--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <button class="btn btn-outline" onclick="clearOrder()">
                     Limpar Pedido
                 </button>
-                <button class="btn btn-primary" id="finish-btn" onclick="finishOrder()" disabled>
-                    Finalizar Pedido
+                <button class="btn btn-primary" id="finish-btn" onclick="copyOrder()" disabled>
+                    Copiar Pedido
                 </button>
             </div>
         </div>
