--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Header com Logo -->
         <div class="header-card">
             <div class="logo-container">
-                <img src="avatar.png" alt="Doces do Xokolat" class="logo">
+                <img src="avatar certo.png" alt="Doces do Xokolat" class="logo">
             </div>
             <h1 class="main-title">Comanda de Pedidos</h1>
         </div>
